--- a/HTML and CSS/Introduction to HTML and CSS/lab2/03_Compound Selectors/input.html
+++ b/HTML and CSS/Introduction to HTML and CSS/lab2/03_Compound Selectors/input.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compound Selectors Example</title>
+    <title>Compound Selectors</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
